<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Teks di atas logo -->
    <TextView
        android:id="@+id/splash_text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="100dp"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <!-- Logo di tengah -->
    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <!-- Teks di bawah logo -->
    <TextView
        android:id="@+id/splash_text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/app_desc"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_medium" />

</FrameLayout>
